--- a/todopractice/assets/stylesheet/style.css
+++ b/todopractice/assets/stylesheet/style.css
@@ -1,27 +1,72 @@
 body {
-	background: ;
+	background: url(../media/pexels-photo-255379.jpeg);
 
 }
 
 .todo-text{
-	position: absolute;
-	top: 20%;
-	left: 40%;
-	transform: translate(-20%, -50%);
-	padding: 10px 30px;
-	border: 1px solid black;
+	/*position: absolute;*/
+	/*top: 20%;*/
+	/*left: 40%;*/
+	/*transform: translate(-20%, -50%);*/
+	padding: 10px 20px;
+	border: 3px solid black;
+	background: transparent;
+}
+
+.wrapper{
+	max-width: 1100px;
+	width: 30%;
+ 	margin: 0 auto;
+ 	/*text-align: center;*/
+ 	
+}
+
+.secondary-wrapper {
+	height: 100%px;
+	background: rgba(100,100,100,0.2);
+	box-shadow: 0px 0px 5px 5px #888888;
 }
 
 .btn {
-	position: absolute;
-	top: 17%;
-	left: 55%;
-	padding: 10px;
+	padding: 8px 30px;
+	font-weight: 600;
+	border: px solid black;
+	background: transparent;
+	font-size: 18px;
+}
+
+h1{
+	margin-top: 3em;
+}
+
+li {
+	padding-bottom: 1em;
+	border-bottom: 1px solid grey;
+	width: 100%;
 
 }
-.todo-list{
-	position: absolute;
-	top: 25%;
-	left: 40%;
-	transform: translate(-20%, -50%);
+
+ul {
+	-webkit-padding-start: 0px;
 }
+.todo-text {
+	margin-top: 15px;
+	border: none;
+	border-bottom: 2px solid black;
+	width: 90%;
+	outline: none;
+
+}
+
+.todo-list {
+	/*padding-bottom: 1em;*/
+}
+input[type=checkbox] {
+	height: 15px;
+	width: 15px;
+	margin-top: 10px;
+}
+
+
+
+
