--- a/todopractice/assets/stylesheet/style.css
+++ b/todopractice/assets/stylesheet/style.css
@@ -9,7 +9,7 @@ body {
 	/*left: 40%;*/
 	/*transform: translate(-20%, -50%);*/
 	padding: 10px 20px;
-	border: 3px solid black;
+	border-bottom: 3px solid black;
 	background: transparent;
 }
 
@@ -30,7 +30,7 @@ body {
 .btn {
 	padding: 8px 30px;
 	font-weight: 600;
-	border: px solid black;
+	border: 1px solid black;
 	background: transparent;
 	font-size: 18px;
 }
