--- a/Day-11/todo_mvc/assets/stylesheet/style.css
+++ b/Day-11/todo_mvc/assets/stylesheet/style.css
@@ -32,7 +32,8 @@ body {
 h1{
 	/*margin-top: 3em;*/
 	font-weight: 500;
-	font-size: 4em;
+	font-size: 6.5em;
+	margin: 0;
 	text-align: center;
 	color: rgba(175,47,47,0.15)
 }
@@ -68,6 +69,7 @@ ul {
 	background: transparent;
 	border: none;
 	cursor: pointer;
+	color: rgba(175,47,47)
 	/*display: none;*/
 }
 .delete:hover {
