--- a/chrome_extension/css/main.css
+++ b/chrome_extension/css/main.css
@@ -1,5 +1,5 @@
 body{
-	background: url(../img/Material.jpeg);
+	background: url(../img/photo.jpeg);
 	background-size: cover;
 	background-repeat: no-repeat;
 }
