--- a/memoryGame/style.css
+++ b/memoryGame/style.css
@@ -56,27 +56,43 @@ body {
 .main-container{
 	display: grid;
 	grid-template-columns: repeat(4, 180px);
-	margin-top: 4em;
-	/*place-items: center;*/
-	/*grid-gap: 10px;*/
-	/*border: 1px solid black;*/
 }
 
 .box{
-	border: 1px solid grey;
-		text-align: center;
-		height: 140px;
-		/*display: none;*/
- background-image: radial-gradient(circle, red, yellow, green);
-		/*background: black*/
+  /*transform: rotate(45deg);*/
+	border: 2px solid white;
+	text-align: center;
+	height: 130px;
+ /*background-image: radial-gradient(circle, red, yellow, green);*/
+	background: url('./img/hex.jpg') no-repeat;
+	background-size: cover;
+	color: white;
+	font-weight: 600;
+
+	  position: relative;
+  transform: scale(1);
+  transform-style: preserve-3d;
+  transition: transform .5s;
+  box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+
+}
+
+.box:active {
+  transform: scale(0.97);
+  transition: transform .2s;
+  transform: rotate(180deg);
+}
+h1{
+	text-align: center;
+	font-size: 40px;
 }
 
 .box i {
 	display: none;
 }
 .fab{
-	font-size: 6em;
-	margin-top: 0.3em;
+	font-size: 5em;
+	margin-top: 0.2em;
 
 }
 .fas{
@@ -86,9 +102,13 @@ body {
 
 }
 
-i{}
-
 .unhide i {
   display: inline-block;
-  transition-duration: 2s; 
+  transition-duration: 10s; 
+}
+
+.contain{
+	font-size: 30px;
+	margin-left: 4em;
+	margin-top: 0;
 }
